# legacy

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README  README.en.md  README.hu.md  README.md  TODO  biso.py  boot.asm  boot.s  build  build.py  dtables.c  dtables.h  eelphant.c  eelphant.h  gba.h  int.asm  itoa.c  itoa.h  kernel.c  kernel.h  keyboard.c  keyboard.h  linker.ld  main.c  makeiso.sh  memmgmt.c  memmgmt.h  mouse.c  mouse.h  multiboot2.h  port.h  ps2.c  ps2.h  realvideo.c  realvideo.h  (+20 more)
amethyst/: about.c  about.h  amethyst.c  app.template.c  ifconfig.c  ifconfig.h  image.c  image.h  luavm.c  luavm.h  meminspect.c  meminspect.h  testwin.c  testwin.h  tftpd.c  tftpd.h
dev/: disk.c  ethernet.c  graphics.c  ide.c  kbd.c  mouse.c  net_loopback.c  pci.c  serial.c  timer.c
docs/: amd_rv100.p
drivers/: kbd.c  pci.c  serial.c  timer.c
eelphant/: eclock.c  eclock.h  eelphant.c  efm.c  efm.h  ifconfig.c  ifconfig.h  iowindow.c  iowindow.h  login.c  login.h  loginwin.c  loginwin.h  luavm.c  luavm.h  msgbox.c  msgbox.h  notepad.c  notepad.h  physdemo.c  physdemo.h  terminal.c  terminal.h  testapp.c  testapp.h
include/: acpi.h  amethyst.h  assert.h  config.h  dma.h  dtables.h  eelphant.h  ioevents.h  kbd.h  kernel.h  kernfont.h  krandom.h  kshell.h  math.h  md5.h  mem.h  memory.h  mouse.h  networking.h  port.h  stdio.h  stdlib.h  string.h  tar.h  text.h  time.h  timer.h  users.h  vfs.h  video.h  vm.h
kern/: boot.s  dma.c  dtables.c  int.s  kbd.c  kernel.c  kernupd.c  krandom.c  md5.c  mem.c  mem_old.c  multiboot2.h  serial.c  ssp.c  stdio.c  text.c  (+4 more)
(+102 files in other folders)
